fixed bug with flash message not showing

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -20,7 +20,7 @@ body {
 }
 
 .page-heading {
-	margin-top: 60px;
+	margin-top: 80px;
 	padding-bottom: 20px;
 }
 
@@ -77,4 +77,8 @@ footer p {
 .contact-form {
 	margin: 0 auto;
 	width: 80%;
+}
+
+.alert {
+	padding-top: 90px;
 }
